--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,7 @@
 Samples:
     10X_P4_3
     #10X_P4_3_S1_L001
+    #sample IDs
 
 STAR_IND: /fs/cbsuvlaminck/workdir/fw262/denovoAssembly/STAR_indices/GRCm38_gencode.vM21
 
